--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ion<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -48,9 +48,9 @@
         <div class="group">
             <label for="gender">Gender:</label>
             <div class="checkyboxes">
-            <div class="box1"><input type="radio" id="gender" value="male" name="gender"><label for="male">Male</label></div>
-            <div class="box"><input type="radio" id="gender" value="female" name="gender"><label for="male">Female</label></div>
-            <div class="box"><input type="radio" id="gender" value="other" name="gender"><label for="other">Other</label></div>
+            <div class="box1"><input type="radio" id="gender" value="male" name="question"><label for="male">Male</label></div>
+            <div class="box"><input type="radio" id="gender" value="female" name="question"><label for="male">Female</label></div>
+            <div class="box"><input type="radio" id="gender" value="other" name="question"><label for="other">Other</label></div>
             </div>
         </div>
         <br>
