--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-ion<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -48,9 +48,9 @@ ion<!DOCTYPE html>
         <div class="group">
             <label for="gender">Gender:</label>
             <div class="checkyboxes">
-            <input type="radio" name="question" value="male" class="box1"><label for="male">Male</label>
-            <input type="radio" name="question" value="female" class="box"><label for="male">Female</label>
-            <input type="radio" name="question" value="other" class="box"><label for="other">Other</label>
+            <input type="radio" name="question" value="male" id="mal"><label for="male">Male</label>
+            <input type="radio" name="question" value="female" id="fem"><label for="female">Female</label>
+            <input type="radio" name="question" value="other" id="oth"><label for="other">Other</label>
             </div>
         </div>
         <br>
